...
    <string name="improvement_in">Improvement (in %)</string>
    <string name="percentage" translatable="false">%</string>
    <string name="highest_day_of_anxiety">Highest Day of Anxiety</string>
    <string name="date_here" translatable="false">(date here)</string>
    <string name="allFields">"All fields are required "</string>
    <string name="passwordMatch">"Password does not match, please try again "</string>
    <string name="nameFormat">Please enter correct name format</string>
    <string name="passwordChar">Password is less than 6 characters, please try again </string>
    <string name="emailFormat">"Please enter correct email format "</string>
    <string name="questionnaire">Please complete the questionnaire </string>
    <string name="incomeFormat">Please enter correct income format </string>
    <string name="selectPic">Select Picture </string>
    <string name="image">"Image chosen "</string>
    <string name="passwordUpdate">Password updated </string>
    <string name="passwordNotUpdated">Password is not updated, please try again </string>
...
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
...
    <string name="MedDeletedFialed">The Medicine Reminder Did not Deleted, Try Again</string>

    <!-- Add Doctor Page -->
    <string name="AddDoc">Add Doctor</string>
    <string name="AddDocName">Doctor Name</string>
    <string name="AddDocEmail">Doctor Email</string>
    <string name="PatientEmail">You Can not Use Your Email</string>
    <string name="AddDocSuccess">The Doctor Added Successfully</string>
    <string name="AddDocFialed">The Doctor Did not Added, Try Again</string>
    <string name="SaveDoc">Add Doctor</string>

    <!-- Delete Med Reminder Page -->
    <string name="MyDoc">My Doctor</string>
    <string name="DeleteDoc">Delete Doctor</string>
...
